Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80596

QWebEngineView Asserts with navigation request for a new tab with qhc

    XMLWordPrintable

Details

    • Windows
    • d4004e30ba9a09f75a810d4734dd6be18616b5e5 (qt/qtwebengine/5.15.0)

    Description

      If help file are qhc files and used with QtwebEngine it crashes when there is navigation request from HTML file (target="_bland") 

      Attached example reproduces the problem:

      Steps

      - Compile attached demo in Debug-Mode.

      • Copy included qhc-Files to the directory of HelpCrash.exe, so that helpCrash-Application can find them.
      • Click in the table of content on "HelpPage1" on left side
      • Inside the displayed Help-page click on a link. on right side
      • An assertion with the problem will arise.

      With Qt Version 5.9.2 there was no problem.

      Attachments

        For Gerrit Dashboard: QTBUG-80596
        # Subject Branch Project Status CR V

        Activity

          People

            juri.valdmann Jüri Valdmann (Inactive)
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes